<resources>
    <string name="app_name">Practica2</string>
    <string name="app_select_brand">Selecciona una marca</string>
    <string name="app_toast_brand">¡Selecciona una marca!</string>
    <string name="app_toast_empty">No puede quedar vacío</string>
    <string name="app_toast_add_success">Registro guardado exitosamente</string>
    <string name="app_toast_add_error">Error al guardar el registro</string>
    <string name="app_add_car_title">Agregar un nuevo auto</string>
    <string name="app_view_car_detail_title">Ver detalle de auto</string>
    <string name="app_edit_car_title">Editar auto</string>
    <string name="app_car_model">Modelo</string>
    <string name="app_car_version">Version</string>
    <string name="app_car_year">Año</string>
    <string name="app_car_km">Kilometraje</string>
    <string name="app_car_update">Actualizar</string>
    <string name="app_car_add">Agregar</string>
    <string name="app_car_delete">Eliminar</string>
    <string name="app_car_edit">Editar</string>
    <string name="app_car_image_description">Logo de marca</string>
    <string name="app_add_car_button_description">Agregar un nuevo auto</string>
    <string name="app_toast_update_success">Auto actualizado correctamente</string>
    <string name="app_toast_update_error">Error al actualizar el auto</string>
    <string name="app_toast_delete_success">Auto eliminado correctamente</string>
    <string name="app_toast_delete_error">Error al elminar el auto</string>
    <string name="app_toast_warning_title">Atención</string>
    <string name="app_toast_warning_message">¿Deseas eliminar el auto?</string>
    <string name="app_toast_accept">Aceptar</string>
    <string name="app_toast_cancel">Cancelar</string>
    <string name="app_brands_audi">audi</string>
    <string name="app_brands_bmw">bmw</string>
    <string name="app_brands_chevrolet">chevrolet</string>
    <string name="app_brands_toyota">toyota</string>
    <string name="app_brands_volkswagen">volkswagen</string>
    <string name="app_km">" km"</string>
    <string name="app_table_name">cars</string>
    <string name="app_brand">brand</string>
    <string name="app_model">model</string>
    <string name="app_version">version</string>
    <string name="app_year">year</string>
    <string name="app_toast_year_error">Año inválido</string>
    <string name="app_car_id">ID</string>
    <string name="app_version_splash">1.0.0</string>
    <string name="app_author">Ivan Nieto</string>
    <string name="app_no_data">¡No hay registros!</string>
</resources>